--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "homepage": "https://github.com/KristinaBalashova/frontend-project-lvl1#readme",
   "bin": {
     "brain-games": "bin/brain-games.js",
-    "brain-even": "bin/brain-even.js"
+    "brain-even": "bin/brain-even.js",
+    "brain-progression": "bin/brain-progression.js",
+    "brain-calc": "bin/brain-calc.js"
   },
   "dependencies": {
     "readline-sync": "^1.4.10"
